--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "blcode",
   "version": "1.0.0",
-  "description": "A library for generator a renderer for bbcode-like lightweight markup languages",
+  "description": "A library for generating a renderer for bbcode-like lightweight markup languages",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,6 +14,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/BrianLabbe/bl-logger.git"
+    "url": "https://github.com/BrianLabbe/blcode.git"
   }
 }
